--- a/main.css
+++ b/main.css
@@ -4,6 +4,25 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes pop-in {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .entry {
   position: absolute;
   width: 100vw;
@@ -13,19 +32,13 @@ body {
   padding: 10px;
   box-sizing: border-box;
   transition: all .2s;
-  animation: come-in .5s;
-}
-@keyframes come-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+  animation: fade-in .5s;
 }
 .uninteractable {
   opacity: 0.3;
+  cursor: pointer;
 }
+
 .choice {
   position: relative;
   padding: 5px;
@@ -42,4 +55,16 @@ body {
 }
 .choice:active {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.6);
+}
+
+.title {
+  font-size: 48px;
+  font-weight: bold;
+  animation: pop-in 1s;
+  line-height: 0.8;
+  margin: 20px 0;
+}
+.has-title .choice {
+  opacity: 0;
+  animation: fade-in .5s 1.5s forwards;
 }
