--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
   font-size: 0;
   margin: 0;
   font-family: 'Lato', sans-serif;
+  word-break: break-word;
 }
 
 @keyframes fade-in {
@@ -62,9 +63,26 @@ body {
   font-weight: bold;
   animation: pop-in 1s;
   line-height: 0.8;
-  margin: 20px 0;
+  margin-top: 20px;
+  position: relative;
+  z-index: 2;
 }
-.has-title .choice {
+.subtitle {
+  position: relative;
+  z-index: 2;
   opacity: 0;
-  animation: fade-in .5s 1.5s forwards;
+  font-size: 24px;
+  animation: fade-in .5s 1s forwards;
+  margin-bottom: 20px;
+}
+.cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 1;
+  animation: fade-in .5s 2.5s reverse forwards;
+  pointer-events: none;
 }
