temp. story beginning lol

--- a/main.css
+++ b/main.css
@@ -52,6 +52,13 @@ body {
   font-size: 14px;
 }
 
+p:first-child {
+  margin-top: 0;
+}
+p:last-child {
+  margin-bottom: 0;
+}
+
 .choice {
   position: relative;
   padding: 5px;
